[package]
name = "rust_tide_test"
version = "0.1.0"
authors = ["Graham <graham.gibbons@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.40"
diesel = { version = "1.4.5", features = ["postgres"] }
tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = "1.0.115"
mobc = { version = "0.5.12", features = ["async-std"] }
mobc-diesel = "1.0.0"
